# divprop

./: .create_setup.py  .gitignore  Makefile  Qtest.py  README.md  activate  build.py  ciphers.py  compute_divcore.py  decoder.py  exper_redundant.py  gurobi.sh  info.txt  linsepfull.py  lst4  lst5  lst6  monotest.py  pyproject.toml  qmc_milp.py  sbox4.sh  setup.py
src/common/: common.hpp
src/divprop/: DivCore.hpp  __init__.py  all_sboxes.py  ciphers.py  divbounds.py  divcore.py  divcore_peekanfs.py  divprop.i  inequalities.py  learn.py  lib.i  lib.py  libsubsets.i  libsubsets.py  logging.py  logs.py  milp.py  sandwich.py  sat.py  sbox.py  sbox_ineqs.py  sboxdiv.py  subsets.py  system_learn.py  tool_random_sbox_benchmark.py  tools.py  utils.py
src/divprop/common/: Sweep.hpp  common.hpp
src/divprop/divprop/: DivCore.cpp  DivCore.hpp
src/divprop/inequalities/: __init__.py  base.py  gem_cut.py  generators.py  monopool.py  pool.py  random_group_cut.py  tools.py
src/divprop/learn/: GainanovSAT.py  LearnModule.py  LevelLearn.py  LowerSetLearn.py  RandomLearn.py  __init__.py  base.py  learn.py
src/divprop/milp/: __init__.py  base.py  external.py  scip.py  symbase.py
src/divprop/prev_inequalities/: __init__.py  base.py  gem_cut.py  monopool.py  pool.py  random_group_cut.py  tools.py
src/divprop/sbox/: Sbox.hpp
src/divprop/subsets/: DenseSet.cpp  DenseSet.hpp  SboxGraph.cpp  SboxGraph.hpp  SparseSet.py  __init__.py
src/optimodel/: __init__.py  generators.py  pool.py  shift_learn.py  tool_milp.py
src/optisolveapi/: base.py  sat.py
src/optisolveapi/milp/: base.py  external.py  gurobi.py  sage.py  symbase.py
src/sbox/: Sbox.hpp
src/subsets/: DenseSet.cpp  DenseSet.hpp  SparseSet.py  WeightedSet.py  __init__.py  common.hpp  lib.i
src/subsets/learn/: GainanovSAT.py  LearnModule.py  LowerSetLearn.py  RandomLearn.py  __init__.py  utils.py
subsets/: __main__.py  test.cpp  test.i
tests/: test_Composition.py  test_DenseSet.py  test_DivCore.py  test_ExtraPrec.py  test_Learn.py  test_QMC1.py  test_SboxGraph.py  test_SparseSet.py  test_milp.py  test_sboxes.py
tests_sage/: test_sbox_ineqs.py
