[tool.poetry]
name = "divprop"
version = "0.1.0"
description = "Tools for Division Property Cryptanalysis"
authors = ["hellman"]
license = "MIT"
build = "build.py"
include = [
    {path = "src/divprop/*.so", format = "wheel"}
]

[tool.poetry.scripts]
"divprop.sbox_ineqs" = 'divprop.sbox_ineqs:main'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a9", "wheel", "setuptools", "binteger"]
build-backend = "poetry.core.masonry.api"
