[tool.poetry]
name = "divprop"
version = "0.2.0"
description = "Tools for Division Property Cryptanalysis"
authors = ["hellman"]
license = "MIT"
build = "build.py"
include = [
    {path = "src/divprop/*.so", format = "wheel"}
]

[tool.poetry.scripts]
"divprop.sbox_ineqs" = 'divprop.sbox_ineqs:main'

[tool.poetry.dependencies]
python = "^3.7"
binteger = "^0.6.2"
tqdm = "^4.58.0"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a9", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"
